--- a/app/src/main/res/layout/current_weather_fragment.xml
+++ b/app/src/main/res/layout/current_weather_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.weather.current.CurrentWeatherFragment">
+    tools:context=".ui.weather.Current.CurrentWeatherFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
